<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"

    tools:context="ge.idevelopers.consumption.MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@drawable/image_view"
       android:id="@+id/main_layout"

       >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.8"
           android:background="@drawable/fuel"
           android:id="@+id/fuel_image"

           >



       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.1"
           android:gravity="center"
           android:id="@+id/line_1"

           >
           <View
               android:layout_width="fill_parent"
               android:layout_height="2dip"
               android:background="#c4cac4" />

           </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.3"
           android:id="@+id/fuel"

           >



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:weightSum="1"
           android:paddingRight="20dp"
           android:id="@+id/first_line"

           >


           <TextView
               android:text="@string/fuel_quantity"
               android:textSize="@dimen/font_size"
               android:textColor="#DADB71"
               android:paddingLeft="10dp"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_weight="0.35"
               android:id="@+id/fuel_text" />


           <EditText
               android:layout_width="0dp"
               android:layout_height="@dimen/input_height"
               android:layout_gravity="center"
               android:textColor="#4C4C4C"
               android:textSize="18sp"
               android:inputType="numberDecimal"
               android:ems="10"
               android:textAlignment="center"
               android:layout_weight="0.5"
               android:background="@drawable/round"
               android:id="@+id/fuel_enter_text"


               />
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.15"/>


       </LinearLayout>


</RelativeLayout>


       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.1"
           android:gravity="center"
           android:id="@+id/line_2"

           >
           <View
               android:layout_width="fill_parent"
               android:layout_height="2dip"
               android:background="#c4cac4" />

       </RelativeLayout>




       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.3"
           android:id="@+id/fuel2"

           >


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:paddingRight="20dp"
               android:id="@+id/second_line"

               >


               <TextView
                   android:text="@string/distance"
                   android:textSize="@dimen/font_size"
                   android:paddingLeft="10dp"
                   android:textColor="#DADB71"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textAlignment="center"
                   android:layout_weight="0.35"
                   android:id="@+id/fuel_text2" />


               <EditText
                   android:layout_width="0dp"
                   android:layout_height="@dimen/input_height"
                   android:layout_gravity="center"
                   android:textColor="#4C4C4C"
                   android:background="@drawable/round"
                   android:textSize="18sp"
                   android:inputType="numberDecimal"
                   android:ems="10"
                   android:textAlignment="center"
                   android:layout_weight="0.5"
                   android:id="@+id/fuel_enter_text2"


                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.15"/>


           </LinearLayout>


       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.1"
           android:gravity="center"
           android:id="@+id/line_3"
           >
           <View
               android:layout_width="fill_parent"
               android:layout_height="2dip"
               android:background="#c4cac4"

               />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.6"

           >


           <Button
               android:layout_width="@dimen/dimen_btn"
               android:layout_height="@dimen/dimen_btn"
               android:background="@drawable/button"
               android:gravity="center"


               android:textSize="@dimen/font_size"
               android:id="@+id/calculate"
               android:text="@string/calculate"
               android:textColor="#B18DFF"
               android:layout_gravity="bottom"

               android:layout_alignParentBottom="true"
               android:layout_centerHorizontal="true" />


       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.2"
           >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:weightSum="1"

        >

        <Button
            android:layout_width="40dp"

            android:textSize="@dimen/font_size"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.2"
            android:textColor="#fff"
            android:text="@string/language"
            android:background="@drawable/round_btn"
            android:onClick="showFragment"
            android:id="@+id/lang"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.6"/>
        <TextView
            android:visibility="invisible"
            android:layout_gravity="bottom"
            android:onClick="playStore"
            android:layout_width="50dp"
            android:layout_height="29dp"
            android:layout_weight="0.2"
            android:textColor="#DADB71"
            android:textSize="15sp"
            android:text="@string/alert_title"
            android:id="@+id/rate"/>
        </LinearLayout>

</RelativeLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.3"
           android:id="@+id/banner"

           >

           <com.google.android.gms.ads.AdView
               android:id="@+id/adView"
               android:windowSoftInputMode="adjustNothing"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_alignParentBottom="true"
               ads:adSize="BANNER"
               ads:adUnitId="@string/banner_ad_unit_id">
           </com.google.android.gms.ads.AdView>


       </RelativeLayout>


   </LinearLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fConteiner"/>



</FrameLayout>
